src/test/ui/suggestions/missing-lt-for-hrtb.stderr
error[E0106]: missing lifetime specifiers
  --> $DIR/missing-lt-for-hrtb.rs:2:32
   |
LL | struct S<'a>(&'a dyn Fn(&X) -> &X);
   |                         --     ^^ expected named lifetime parameter
   |                                |
   |                                expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say which one of argument 1's 2 lifetimes it is borrowed from
help: consider using the `'a` lifetime
   |
LL | struct S<'a>(&'a dyn Fn(&X) -> &'a X<'a>);
   |                                 ++  ++++

error[E0106]: missing lifetime specifiers
  --> $DIR/missing-lt-for-hrtb.rs:4:40
   |
LL | struct V<'a>(&'a dyn for<'b> Fn(&X) -> &X);
   |                                 --     ^^ expected named lifetime parameter
   |                                        |
   |                                        expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say which one of argument 1's 2 lifetimes it is borrowed from
note: these named lifetimes are available to use
  --> $DIR/missing-lt-for-hrtb.rs:4:10
   |
LL | struct V<'a>(&'a dyn for<'b> Fn(&X) -> &X);
   |          ^^              ^^
help: consider using one of the available lifetimes here
   |
LL | struct V<'a>(&'a dyn for<'b> Fn(&X) -> &'lifetime X<'lifetime>);
   |                                         +++++++++  +++++++++++

error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/missing-lt-for-hrtb.rs:10:9
   |
LL |         x
   |         ^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the anonymous lifetime #1 defined here
  --> $DIR/missing-lt-for-hrtb.rs:8:16
   |
LL |       let x = S(&|x| {
   |  ________________^
LL | |         println!("hi");
LL | |         x
LL | |
LL | |
LL | |     });
   | |_____^

error[E0308]: mismatched types
  --> $DIR/missing-lt-for-hrtb.rs:10:9
   |
LL |         x
   |         ^ lifetime mismatch
   |
   = note: expected reference `&'static X<'static>`
              found reference `&'static X<'_>`
note: the anonymous lifetime #2 defined here...
  --> $DIR/missing-lt-for-hrtb.rs:8:16
   |
LL |       let x = S(&|x| {
   |  ________________^
LL | |         println!("hi");
LL | |         x
LL | |
LL | |
LL | |     });
   | |_____^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0106, E0308, E0312.
For more information about an error, try `rustc --explain E0106`.
